Fix WeekGrid not aligning with WeekHeader on MacOS, change scrollbar style

--- a/source/index.css
+++ b/source/index.css
@@ -2,4 +2,30 @@ html,
 body {
     margin: 0px !important;
     padding: 0px !important;
+    scrollbar-width: 8px;
+}
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+    width: 16px;
+    scrollbar-width: 8px;
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: rgb(190, 193, 198);
+    border: 4px solid white;
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+}
+
+::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 8px;
 }
